--- a/Lowkey/app/src/main/res/drawable/roundbtn_orangelight.xml
+++ b/Lowkey/app/src/main/res/drawable/roundbtn_orangelight.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FF78B7CC" />
+    <solid android:color="@color/orangeLight" />
     <corners android:bottomRightRadius="30dp"
         android:bottomLeftRadius="30dp"
         android:topRightRadius="30dp"
