--- a/Lowkey/app/src/main/res/layout/activity_register_activity2_fl.xml
+++ b/Lowkey/app/src/main/res/layout/activity_register_activity2_fl.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/gradient1"
 
     android:layout_height="match_parent"
-    tools:context=".auth.RegisterActivity1EP">
+    tools:context=".auth.register.RegisterActivity1EP">
 
 
     <TextView
@@ -29,6 +29,7 @@
     <TextView
         android:id="@+id/location"
         android:layout_width="300dp"
+        android:background="@drawable/frame_orange"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -36,7 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Location"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialTextField">
