--- a/Lowkey/app/src/main/res/values/arrays.xml
+++ b/Lowkey/app/src/main/res/values/arrays.xml
@@ -5,4 +5,14 @@
         <item>Male</item>
         <item>Female</item>
     </string-array>
+
+
+    <string-array name="radius">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>5</item>
+        <item>8</item>
+        <item>13</item>
+    </string-array>
 </resources>
