--- a/Lowkey/app/src/main/res/layout/fragment_issues.xml
+++ b/Lowkey/app/src/main/res/layout/fragment_issues.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.fragments.IssuesFragment">
+    tools:context=".main.fragments.issue.IssuesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.constraint.ConstraintLayout
