--- a/Lowkey/app/src/main/res/layout/fragment_fragment_listmap.xml
+++ b/Lowkey/app/src/main/res/layout/fragment_fragment_listmap.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/issuerv"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:fadingEdgeLength="20dp"
