--- a/Lowkey/app/src/main/res/layout/activity_login.xml
+++ b/Lowkey/app/src/main/res/layout/activity_login.xml
@@ -106,7 +106,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="CREATE ACCOUNT"
+        android:text="LOGIN"
         android:textColor="@color/orangeLight"
         android:textSize="32dp"
         android:textStyle="bold"
