--- a/Lowkey/app/src/main/res/values/colors.xml
+++ b/Lowkey/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FF784E</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#FF784E</color>
+    <color name="colorAccent">#FF784E</color>
     <color name="orangeLight">#FF784E</color>
-    <color name="orangeDark">#FF3E01</color>
+    <color name="orangeDark">#FF784E</color>
 </resources>
