--- a/Lowkey/app/src/main/res/layout/activity_entry.xml
+++ b/Lowkey/app/src/main/res/layout/activity_entry.xml
@@ -23,7 +23,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="invisible">
 
         <Button
             android:id="@+id/signup"
@@ -31,15 +31,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
             android:layout_marginLeft="64dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="64dp"
             android:layout_marginRight="64dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/roundbtn_white"
             android:text="SIGN UP FREE"
             app:layout_constraintBottom_toTopOf="@+id/facebooklogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <Button
             android:id="@+id/facebooklogin"
@@ -51,7 +53,7 @@
             android:layout_marginRight="64dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/roundbtn_blue"
-            android:text="CONTINUE WITH FACEBOOK"
+            android:text="CONTINUE WITHOUT ACCOUNT"
             app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -65,12 +67,12 @@
             android:layout_marginLeft="64dp"
             android:layout_marginEnd="64dp"
             android:layout_marginRight="64dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="140dp"
             android:background="@drawable/roundbtn_orangelight"
             android:text="LOG IN"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -90,36 +92,23 @@
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView"
+        <TextView
+            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="128dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:text="iTEC 2018 CONTEST APP"
+            android:textColor="@color/orangeLight"
+            android:textSize="30dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="368dp"
-            android:layout_height="189dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/signup"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.0" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
