--- a/Lowkey/app/src/main/res/layout/activity_login.xml
+++ b/Lowkey/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
         android:layout_marginRight="64dp"
         android:background="@drawable/roundbtn_orangelight"
         android:elevation="15dp"
-        android:text="register"
+        android:text="LOGIN"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
